# Expensee

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  architecture.mmd  package.json  rust-toolchain.toml  tsconfig.json
app/: .env.local.example  .vercelignore  README.md  next.config.js  package-lock.json  package.json
app/components/: ExpenseeShell.tsx  PageShell.tsx  StatusPill.tsx  StepCard.tsx  WalletButton.tsx
app/contexts/: ThemeContext.tsx
app/lib/: copy.ts  magicblock.ts  payroll-client.ts
app/pages/: _app.tsx  bridge.tsx  employee.tsx  employer.tsx  index.tsx  magicblock.tsx  payments.tsx  reports.tsx
app/scripts/: backfill-decrypt-permissions.cjs  check_employee_owner.ts  check_employee_txs.ts  check_vault_token.ts  create-public-usdc-mint.cjs  mint-payusd.cjs  test_handles.ts  update-keeper-v2.cjs
app/styles/: globals.css
backend/keeper/: .env.example  README.md  ecosystem.config.cjs  package.json
docs/: HOW_IT_WORKS.md  MAGICBLOCK.md  demo-checklist-devnet.md  env_reference.md  production-readiness.md  public-entry-exit-demo.md  runbook-v2.md  umbra-hybrid-rollout.md
frontend/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.js
frontend/components/: ActionResult.tsx  AdvancedDetails.tsx  AgentChat.tsx  ExpenseeShell.tsx  InlineHelp.tsx  Logo.tsx  PageShell.tsx  StatusPill.tsx  StepCard.tsx  ThemeToggle.tsx
frontend/contexts/: ThemeContext.tsx
frontend/hooks/: usePayrollHistory.ts
frontend/lib/: agentV4Checklist.js  copy.ts  magicblock.ts  payroll-client.ts  range.ts  ui-state.ts
frontend/pages/: _app.tsx  agent.tsx  bridge.tsx  dashboard.tsx  employee-v2.tsx  employee-v3.tsx  employee-v4.tsx  employee.tsx  employees.tsx  employer-v2.tsx  employer-v3.tsx  employer-v4.tsx  employer.tsx  history.tsx  index.tsx  payments.tsx  reports.tsx  setup.tsx  vault.tsx
frontend/scripts/: agent-v4-checklist.test.js  backfill-decrypt-permissions.cjs  check_employees.cjs  create-bridge-escrow-confidential-account.cjs  manual-invoke-crank.mjs  mint-public-usdc.cjs  monitor-er-logs.mjs  monitor_er_account.cjs  purge-v2-privacy.cjs  register-token-metadata.cjs  setup-v2-stream.cjs  setup-v4-pooled.cjs  test-crank-manual.js  test_encryption_flow.ts  update-keeper-v2.cjs  v4-claim-payout.cjs  v4-crank-e2e.cjs  v4-request-withdraw.cjs  verify-er-state.js  verify-er-state.mjs
frontend/styles/: globals.css
landingpage/: README.md  package.json
landingpage/app/: globals.css  layout.tsx  page.tsx
landingpage/components/: AgenticStream.tsx  Benefits.tsx  CompareCards.tsx  FAQ.tsx  Footer.tsx  GlobalScale.tsx  Globe.tsx  Hero.tsx  HolographicCard.tsx  Logo.tsx  (+6 more)
programs/payroll/: Cargo.toml
programs/payroll/src/: constants.rs  contexts.rs  errors.rs  events.rs  helpers.rs  lib.rs
programs/payroll/src/state/: business.rs  employee.rs  mod.rs  shielded_payout.rs  stream_config.rs  v3.rs  v4.rs  withdraw.rs
scripts/: check_vault.cjs  clean-vercel-env.sh  create-new-mint.ts  dev-all.cjs  keeper-healthcheck.cjs  push-vercel-env.sh  run-v4-flow.cjs  setup-v4-pooled.cjs  v4-delegate-cycle.cjs  v4-generate-devnet.ts  v4-keeper-free-withdraw.cjs  v4-withdraw-flow.cjs  verify_er_cranks.cjs
tests/: payroll.ts  shielded-payout.ts
(+45 files in other folders)
