[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
# Anchor 0.32.1 (required for MagicBlock compatibility)
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

# MagicBlock
ephemeral-rollups-sdk = { version = "0.8.3", features = ["anchor"] }

# Other dependencies
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
