[package]
name = "payroll"
version = "0.1.0"
description = "Confidential Payroll Program using Inco Confidential Tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payroll"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
# Anchor 0.32.1 (matching MagicBlock example)
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

# SHA-256 for employee auth hash verification (matches client-side sha256).
sha2 = "0.10.8"

# MagicBlock Ephemeral Rollups SDK for TEE delegation
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor"] }

# Inco Lightning SDK for confidential computation on Solana (Devnet Beta)
# Program ID: 5sjEbPiqgZrYwR31ahR6Uk9wf5awoX61YGg7jExQSwaj
inco-lightning = { version = "0.1.4", features = ["cpi"] }

# Inco Confidential SPL Token SDK
# Used for confidential token transfers (encrypted amounts on-chain)
inco-token = { git = "https://github.com/Inco-fhevm/lightning-rod-solana.git", features = ["cpi"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
